<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        style="@style/Theme.AppTheme.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        tools:context=".mvc.view.android.activity.main.MainFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".mvc.view.android.activity.main.MainFragment">

                <TextView
                    android:id="@+id/text_service_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_status"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_service_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/service_is_running"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_start_service"
                    app:layout_constraintEnd_toStartOf="@+id/button_start_service"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button_start_service" />

                <Button
                    android:id="@+id/button_start_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/stop_service"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_service_status_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/top_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:barrierMargin="0dp"
                    app:constraint_referenced_ids="text_service_status, button_start_service" />

                <TextView
                    android:id="@+id/text_configured_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bound_actions"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_barrier" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    app:flexWrap="wrap"
                    app:justifyContent="center"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_configured_actions"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_action_multiple_keys" />

                <TextView
                    android:id="@+id/text_no_action_bindings_exist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_action_bindings_exists"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_view"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/recycler_view"
                    app:layout_constraintTop_toTopOf="@+id/recycler_view"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textSize="16sp"
        app:borderWidth="0dp"
        app:layout_anchor="@+id/card"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>